fixed data.sql, updated openapi documentation, fixed request body
