# swagger/openapi.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: Swagger Petstore - OpenAPI 3.0
+  title: Swagger IAA - OpenAPI 3.0
   version: 0.0.1
 servers:
   - url: http://localhost:8080/rest
@@ -41,11 +41,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Publication'
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Publication'
     put:
       tags:
         - Publications
@@ -57,21 +52,12 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Publication'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Publication'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Publication'
         required: true
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/Publication'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/Publication'
     post:
@@ -92,21 +78,12 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Publication'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Publication'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Publication'
         required: true
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/Publication'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/Publication'
   /publication/{key}:
@@ -145,11 +122,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Borrower'
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Borrower'
     put:
       tags:
         - Borrower
@@ -161,21 +133,12 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Borrower'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Borrower'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Borrower'
         required: true
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/Borrower'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/Borrower'
     post:
@@ -189,21 +152,12 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/BorrowerCreate'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/BorrowerCreate'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/BorrowerCreate'
         required: true
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/Borrower'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/Borrower'
   /borrower/{uuid}:
@@ -250,11 +204,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Assignment'
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Assignment'
     put:
       tags:
         - Assignment
@@ -266,21 +215,12 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Assignment'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Assignment'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Assignment'
         required: true
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/Assignment'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/Assignment'
     post:
@@ -294,21 +234,12 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/AssignmentCreate'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/AssignmentCreate'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/AssignmentCreate'
         required: true
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/Assignment'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/Assignment'
   /assignment/extend/{uuid}:
@@ -329,11 +260,6 @@ paths:
           description: Successful assignment
           content:
             application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Assignment'
-            application/xml:
               schema:
                 type: array
                 items:
@@ -384,11 +310,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/OverdueNotice'
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/OverdueNotice'
   /overdue-notice/{uuid}:
     delete:
       tags:
@@ -429,9 +350,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Warning'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Warning'
   /kind-of-publication:
     get:
       tags:
@@ -448,11 +366,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/KindOfPublication'
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/KindOfPublication'
     put:
       tags:
         - Kind of publications
@@ -464,21 +377,12 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/KindOfPublication'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/KindOfPublication'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/KindOfPublication'
         required: true
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/KindOfPublication'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/KindOfPublication'
     post:
@@ -492,21 +396,12 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/KindOfPublicationCreate'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/KindOfPublicationCreate'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/KindOfPublicationCreate'
         required: true
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/KindOfPublication'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/KindOfPublication'
   /kind-of-publication/{uuid}:
@@ -545,11 +440,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Author'
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Author'
     put:
       tags:
         - Author
@@ -561,21 +451,12 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Author'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Author'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Author'
         required: true
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/Author'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/Author'
     post:
@@ -589,21 +470,12 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/AuthorCreate'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/AuthorCreate'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/AuthorCreate'
         required: true
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/Author'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/Author'
   /author/{uuid}:
@@ -642,11 +514,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Keyword'
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Keyword'
     put:
       tags:
         - Keywords
@@ -658,21 +525,12 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Keyword'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Keyword'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Keyword'
         required: true
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/Keyword'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/Keyword'
     post:
@@ -686,21 +544,12 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/KeywordCreate'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/KeywordCreate'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/KeywordCreate'
         required: true
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/Keyword'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/Keyword'
   /keyword/{uuid}:
@@ -801,7 +650,7 @@ components:
           format: date-time
         publisher:
           type: string
-        kindOfPublication:
+        kindsOfPublication:
           $ref: '#/components/schemas/KindOfPublication'
         ISBN:
           type: string
